@@ -8,6 +8,9 @@ git-annex (6.20160528) UNRELEASED; urgency=medium
   * sync --content: Fix bug that caused transfers of files to be made 
     to a git remote that does not have a UUID. This particularly impacted
     clones from gcrypt repositories.
+  * Pass -S to git commit-tree when commit.gpgsign is set and when
+    making a non-automatic commit, in order to preserve current behavior
+    when used with git 1.9, which has stopped doing this itself.
 
  -- Joey Hess <id@joeyh.name>  Fri, 27 May 2016 13:12:48 -0400
 
